--- a/index.html
+++ b/index.html
@@ -87,17 +87,6 @@
 						<path d="M153 492c0-165.685 134.315-300 300-300s300 134.315 300 300H603c0-82.843-67.157-150-150-150s-150 67.157-150 150H153z" transform="translate(-153 -192)" fill="url(#disk-3-a)" fill-rule="evenodd"/>
 					</svg>
 				</div>
-				<div class="hero-disk hero-disk-4 is-moving-object is-translating" data-translating-factor="50">
-					<svg width="600" height="300" viewBox="0 0 600 300" xmlns="http://www.w3.org/2000/svg">
-					    <defs>
-					        <linearGradient x1="0%" y1="100%" y2="100%" id="disk-4-a">
-					            <stop stop-color="#040404" stop-opacity="0" offset="0%"/>
-					            <stop stop-color="#D15680" offset="100%"/>
-					        </linearGradient>
-					    </defs>
-					    <path d="M817 687c0 165.685-134.315 300-300 300S217 852.685 217 687h150c0 82.843 67.157 150 150 150s150-67.157 150-150h150z" transform="translate(-217 -687)" fill="url(#disk-4-a)" fill-rule="evenodd"/>
-					</svg>
-				</div>
 				<div class="hero-sphere hero-sphere-2 is-moving-object is-translating" data-translating-factor="30">
 					<svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
 					    <defs>
@@ -111,39 +100,8 @@
 				</div>
                 <div class="container-sm">
                     <div class="hero-inner">
-                        <h1 class="hero-title mt-0 is-revealing">Landing template for startups</h1>
-                        <p class="hero-paragraph is-revealing">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
-                        <div class="hero-cta is-revealing">
-                            <a class="button button-primary button-shadow" href="#">Get early access</a>
-                        </div>
-                        <div class="hero-browser">
-							<svg width="800" height="450" viewBox="0 0 800 450" xmlns="http://www.w3.org/2000/svg">
-							    <defs>
-							        <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="browser-a">
-							            <stop stop-color="#474452" offset="0%"/>
-							            <stop stop-color="#363342" offset="100%"/>
-							        </linearGradient>
-							        <linearGradient x1="100%" y1="0%" x2="0%" y2="100%" id="browser-b">
-							            <stop stop-color="#302D3B" stop-opacity=".24" offset="0%"/>
-							            <stop stop-color="#302D3B" offset="100%"/>
-							        </linearGradient>
-							        <linearGradient x1="100%" y1="-12.816%" x2="0%" y2="-12.816%" id="browser-c">
-							            <stop stop-color="#5A5667" stop-opacity="0" offset="0%"/>
-							            <stop stop-color="#5A5667" offset="50.045%"/>
-							            <stop stop-color="#5A5667" stop-opacity="0" offset="100%"/>
-							        </linearGradient>
-							    </defs>
-							    <g fill="none" fill-rule="evenodd">
-							        <rect fill="url(#browser-a)" width="800" height="450" rx="4"/>
-							        <path fill="url(#browser-b)" d="M60 82h122v320H60zM213 82h1v320h-1zM399 82h1v320h-1zM585 82h1v320h-1zM246 82h122v320H246zM432 82h122v320H432zM618 82h122v320H618z"/>
-							        <circle fill="#D15680" cx="24" cy="16" r="4"/>
-							        <circle fill="#F2D084" cx="40" cy="16" r="4"/>
-							        <circle fill="#84F293" cx="56" cy="16" r="4"/>
-							        <path fill="#5D5B6E" d="M756 14h24v4h-24z"/>
-							        <path fill="url(#browser-c)" d="M47 32h706v2H47z"/>
-							    </g>
-							</svg>
-                        </div>
+                        <img src="minicog_logo.png" >
+                        <p class="hero-paragraph is-revealing">Artifical Intelligence Consulting and Services</p>
                     </div>
                 </div>
             </section>
@@ -172,8 +130,18 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Feature</h3>
-                                    <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to emphasise design elements.</p>
+                                    <h3 class="feature-title mt-24">Natrual Language Processing</h3>
+                                    <p class="text-sm">We specialize in Natural
+										Language Processing
+										technology that enables
+										machines to understand
+										and comprehend what
+										people speak and write,
+										interpret their
+										sentiments, and take
+										relevant actions on the
+										basis of this
+										understanding.</p>
                                 </div>
                             </div>
                             <div class="feature">
@@ -196,8 +164,17 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Feature</h3>
-                                    <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to emphasise design elements.</p>
+                                    <h3 class="feature-title mt-24">Digital Virtual Agents</h3>
+                                    <p class="text-sm">We create highly
+										advanced AI-powered
+										digital virtual agents,
+										which are capable of
+										understanding and
+										interpreting the human
+										behavior and delivering
+										extensive support as
+										well as enriching
+										customer experiences.</p>
                                 </div>
                             </div>
                         </div>
@@ -218,8 +195,16 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Feature</h3>
-                                    <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to emphasise design elements.</p>
+                                    <h3 class="feature-title mt-24">Decision Management</h3>
+                                    <p class="text-sm">We simplify and automate
+										the business decisions
+										with the AI-assisted
+										business decision
+										management solutions
+										that drive accurate
+										decisions on the basis of
+										reliable algorithmic and
+										predictive systems.</p>
                                 </div>
                             </div>
                             <div class="feature">
@@ -239,8 +224,19 @@
 										    </g>
 										</svg>
                                     </div>
-                                    <h3 class="feature-title mt-24">Feature</h3>
-                                    <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to emphasise design elements.</p>
+                                    <h3 class="feature-title mt-24">Robotic Process
+										Automation</h3>
+                                    <p class="text-sm">Robotic Process
+										Automation is another
+										skill we possess as we
+										build powerful
+										applications that carry out
+										repetitive processes on
+										the basis of machinelearned
+										or user-generated
+										instructions, without the
+										need for human
+										intervention.</p>
                                 </div>
                             </div>
                         </div>
@@ -252,15 +248,15 @@
                 <div class="container-sm">
                     <div class="cta-inner section-inner">
                         <div class="cta-content text-center">
-                            <h2 class="section-title mt-0">Stay in the know</h2>
-                            <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                            <h2 class="section-title mt-0">Contact Us</h2>
+                            <p class="section-paragraph">Get in touch with us to know how AI can help improve your business.</p>
 							<div class="section-cta">
-								<a class="button button-primary button-shadow" href="#">Get early access</a>
+								<p class="text" >hello@minicog.ai</p>
 							</div>
 						</div>
                     </div>
                 </div>
-            </section>
+            </section> 
         </main>
 
         <footer class="site-footer">
@@ -320,47 +316,7 @@
 							</svg>
                         </a>
                     </div>
-                    <ul class="footer-links list-reset">
-                        <li>
-                            <a href="#">Contact</a>
-                        </li>
-                        <li>
-                            <a href="#">About us</a>
-                        </li>
-                        <li>
-                            <a href="#">FAQ's</a>
-                        </li>
-                        <li>
-                            <a href="#">Support</a>
-                        </li>
-                    </ul>
-                    <ul class="footer-social-links list-reset">
-                        <li>
-                            <a href="#">
-                                <span class="screen-reader-text">Facebook</span>
-                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M6.023 16L6 9H3V6h3V4c0-2.7 1.672-4 4.08-4 1.153 0 2.144.086 2.433.124v2.821h-1.67c-1.31 0-1.563.623-1.563 1.536V6H13l-1 3H9.28v7H6.023z" fill="#FFFFFF"/>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="screen-reader-text">Twitter</span>
-                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M16 3c-.6.3-1.2.4-1.9.5.7-.4 1.2-1 1.4-1.8-.6.4-1.3.6-2.1.8-.6-.6-1.5-1-2.4-1-1.7 0-3.2 1.5-3.2 3.3 0 .3 0 .5.1.7-2.7-.1-5.2-1.4-6.8-3.4-.3.5-.4 1-.4 1.7 0 1.1.6 2.1 1.5 2.7-.5 0-1-.2-1.5-.4C.7 7.7 1.8 9 3.3 9.3c-.3.1-.6.1-.9.1-.2 0-.4 0-.6-.1.4 1.3 1.6 2.3 3.1 2.3-1.1.9-2.5 1.4-4.1 1.4H0c1.5.9 3.2 1.5 5 1.5 6 0 9.3-5 9.3-9.3v-.4C15 4.3 15.6 3.7 16 3z" fill="#FFFFFF"/>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="screen-reader-text">Google</span>
-                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M7.9 7v2.4H12c-.2 1-1.2 3-4 3-2.4 0-4.3-2-4.3-4.4 0-2.4 2-4.4 4.3-4.4 1.4 0 2.3.6 2.8 1.1l1.9-1.8C11.5 1.7 9.9 1 8 1 4.1 1 1 4.1 1 8s3.1 7 7 7c4 0 6.7-2.8 6.7-6.8 0-.5 0-.8-.1-1.2H7.9z" fill="#FFFFFF"/>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                    <div class="footer-copyright">&copy; 2018 Florence, all rights reserved</div>
+                    <div >&copy; 2018 minicog, all rights reserved</div>
                 </div>
             </div>
         </footer>
